<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-speech-rpc</artifactId>
  <version>0.0.3</version>

  <properties>
    <jsapi2.groupId>com.github.umjammer.jsapi2</jsapi2.groupId> <!-- org.jvoicexml / com.github.umjammer.jsapi2 -->
    <jsapi2.version>0.6.9</jsapi2.version>

    <javapackager.name>jsapi-server</javapackager.name>
  </properties>

  <profiles>
    <profile>
      <id>release</id>
      <activation>
        <file>
          <exists>${basedir}/local.properties</exists>
        </file>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <id>read-properties</id>
                <phase>initialize</phase>
                <goals>
                  <goal>read-project-properties</goal>
                </goals>
                <configuration>
                  <files>
                    <file>${basedir}/local.properties</file>
                  </files>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>pl.project13.maven</groupId>
            <artifactId>git-commit-id-plugin</artifactId>
            <version>4.9.10</version>
            <executions>
              <execution>
                <id>get-the-git-infos</id>
                <goals>
                  <goal>revision</goal>
                </goals>
                <phase>initialize</phase>
              </execution>
            </executions>
            <configuration>
              <generateGitPropertiesFile>false</generateGitPropertiesFile>
              <includeOnlyProperties>
                <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
              </includeOnlyProperties>
              <commitIdGenerationMode>full</commitIdGenerationMode>
            </configuration>
          </plugin>

          <plugin>
            <groupId>io.github.fvarrui</groupId>
            <artifactId>javapackager</artifactId>
            <version>1.7.5</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>package</goal>
                </goals>
                <configuration>
                  <name>${javapackager.name}</name>
                  <organizationName>Copyright © 2024 by vavi, All rights reserved.</organizationName>

                  <mainClass>vavi.speech.rpc.jsapi2.server.Main</mainClass>
                  <runnableJar>${project.artifactId}-${project.version}.jar</runnableJar>
                  <generateInstaller>false</generateInstaller>
                  <bundleJre>true</bundleJre>
                  <jdkPath>${intel.jdk.home}</jdkPath>
                  <jreMinVersion>17</jreMinVersion>

                  <assetsDir>src/main/package</assetsDir>

                  <additionalResources>
                    <additionalResource>${project.build.testResources[0].directory}/logging.properties</additionalResource>
                    <additionalResource>${project.build.testResources[0].directory}/aquestalk10.properties</additionalResource>
                    <additionalResource>${project.build.testResources[0].directory}/htsvoice.csv</additionalResource>
                    <additionalResource>local.properties</additionalResource>
                  </additionalResources>

                  <vmArgs>
                    <vmArg>-ea</vmArg>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
                    <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                    <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
                    <vmArg>-Dhtsvoice.dir=${user.home}/src/resources/htsvoice-tohoku-f01</vmArg>
                    <vmArg>-Dgoogle.credential=${basedir}/tmp/google-app-credentials.json</vmArg>
                    <vmArg>-Dvavi.util.logging.VaviFormatter.extraClassMethod=\\\(org\.slf4j\..*#.*\\\|sun\.util\.logging\.internal\.LoggingProviderImpl.*#log\\\)</vmArg> <!-- needs escape for shell -->
                  </vmArgs>

                  <macConfig>
                    <!-- true cause error -->
                    <codesignApp>false</codesignApp>
                    <generatePkg>false</generatePkg>
                    <infoPlist>
                      <additionalEntries>
                        <![CDATA[
                      <key>CFBundleName</key>
                      <string>${javapackager.name}</string>
                      <key>CFBundleShortVersionString</key>
                      <string>${git.build.time}</string>
                      <key>LSEnvironment</key>
                      <dict>
                        <key>GOOGLE_APPLICATION_CREDENTIALS</key>
                        <string>${basedir}/tmp/google-app-credentials.json</string>
                      </dict>
                    ]]>
                      </additionalEntries>
                    </infoPlist>
                  </macConfig>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <argLine>
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Dvavi.util.logging.VaviFormatter.extraClassMethod=(org\.slf4j\.jul\.JDK14LoggerAdapter#innerNormalizedLoggingCallHandler|sun\.util\.logging\.internal\.LoggingProviderImpl.*#log)
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey</groupId>
        <artifactId>jersey-bom</artifactId>
        <version>3.1.5</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.10</version>
    </dependency>

    <!-- jspai2 -->
    <dependency>
      <groupId>${jsapi2.groupId}</groupId>
      <artifactId>javax.speech</artifactId>
      <version>${jsapi2.version}</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-speech2</artifactId>
      <version>0.0.14</version>
    </dependency>

    <!-- client -->
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.activation</groupId>
      <artifactId>jakarta.activation-api</artifactId>
      <version>2.1.3</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

    <!-- server -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-http</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.11</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.11</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
